[package]
name = "cargo-exe"
description = "A Cargo plugin to print the path to the output executable from `cargo build`."
version = "1.0.0-b1"
edition = "2021"

authors = ["J.S. Dreim <jsdreim@protonmail.com>"]
repository = "https://github.com/jsdreim/git-exe"

readme = "README.md"
documentation = "https://docs.rs/cargo-exe"
license = "Apache-2.0"

exclude = ["/.idea"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cli", "plugin", "utility"]


[dependencies]
cargo_toml = "0.11"
clap = { version = "3.1.10", features = ["cargo", "derive"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
