[package]
name = "cargo-exe-v2"
description = "A Cargo plugin to print the path to the output executable from `cargo build`."
version = "2.0.2"
edition = "2021"

authors = ["JS Dreim <jsdreim@protonmail.com>", "Sergei Lemeshkin <sergeilem@gmail.com>"]
repository = "https://github.com/sergeilem/cargo-exe"

readme = "README.md"
documentation = "https://docs.rs/cargo-exe"
license = "Apache-2.0"

exclude = ["/.idea"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cli", "plugin", "utility"]


[dependencies]
cargo_toml = "0.21.0"
clap = { version = "4.5.30", features = ["cargo", "derive"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
